--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: jsPsych笔记
+description: 进度追踪，问题记录，进展与方法整理
